--- a/{{cookiecutter.project_shortname}}/pyproject.toml
+++ b/{{cookiecutter.project_shortname}}/pyproject.toml
@@ -42,12 +42,12 @@ records = "{{ cookiecutter.package_name }}.records.ext:RecordsApp"
 records = "{{ cookiecutter.package_name }}.records.jsonschemas"
 
 [tool.poetry.plugins."invenio_pidstore.minters"]
-records = "{{ cookiecutter.package_name }}.minters:recid_minter"
+records = "{{ cookiecutter.package_name }}.records.minters:recid_minter"
 all-records = "{{ cookiecutter.package_name }}.minters:records_all_minter"
 
 [tool.poetry.plugins."invenio_pidstore.fetchers"]
-records = "{{ cookiecutter.package_name }}.fetchers:recid_fetcher"
-all-records = "{{ cookiecutter.package_name }}.fetchers:restoration_object_all_fetcher"
+records = "{{ cookiecutter.package_name }}.records.fetchers:recid_fetcher"
+all-records = "{{ cookiecutter.package_name }}.records.fetchers:restoration_object_all_fetcher"
 
 [build-system]
 requires = ["poetry>=0.12"]
