--- a/{{cookiecutter.project_shortname}}/pyproject.toml
+++ b/{{cookiecutter.project_shortname}}/pyproject.toml
@@ -11,17 +11,17 @@ authors = [
 python = "^3.8"
 requests = "^2.24.0"
 
-oarepo = "^3.3.50"
-oarepo-micro-api = "^3.3.49"
+oarepo = "^3.3.51"
+oarepo-micro-api = "^3.3.50"
 
-oarepo-validate = "^1.0.0"
-oarepo-mapping-includes = "^1.2.0"
+oarepo-validate = "^1.5.2"
+oarepo-mapping-includes = "^1.4.2"
 oarepo-invenio-model = "^2.1.2"
 oarepo-dc = "^2.1.0"
-oarepo-records-draft = { version = "^5.0.0-alpha.22", allow-prereleases = true }
+oarepo-records-draft = "^5.5.3"
 invenio-records-files = "^1.2.1"
-oarepo-ui = "^2.0"
-oarepo-actions = "^1.0.5"
+oarepo-ui = "^2.0.1"
+oarepo-actions = "^1.0.6"
 
 [tool.poetry.plugins."invenio_config.module"]
 records = "{{ cookiecutter.package_name }}.config"
@@ -43,11 +43,11 @@ records = "{{ cookiecutter.package_name }}.records.jsonschemas"
 
 [tool.poetry.plugins."invenio_pidstore.minters"]
 records = "{{ cookiecutter.package_name }}.records.minters:recid_minter"
-all-records = "{{ cookiecutter.package_name }}.minters:records_all_minter"
+all-records = "{{ cookiecutter.package_name }}.records.minters:records_all_minter"
 
 [tool.poetry.plugins."invenio_pidstore.fetchers"]
 records = "{{ cookiecutter.package_name }}.records.fetchers:recid_fetcher"
-all-records = "{{ cookiecutter.package_name }}.records.fetchers:restoration_object_all_fetcher"
+all-records = "{{ cookiecutter.package_name }}.records.fetchers:records_all_fetcher"
 
 [build-system]
 requires = ["poetry>=0.12"]
