--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,10 +51,13 @@ jobs:
           printf '\n\n\n\n\n\n\n\n\n\n\n\n\n\n' | cookiecutter https://github.com/oarepo/cookiecutter-oarepo-instance.git
           cd my-site
           ls -la
-#      - name: Install dependencies
-#        run: |
-#          python -m pip install --upgrade pip==20.2.4 wheel setuptools
-#          pip install -e .[tests]
+      - name: Before install
+        run: |
+          pip install poetry
+          poetry config virtualenvs.create false
+      - name: Install dependencies
+        run: |
+          poetry install
 #      - name: Test with pytest
 #        run: |
 #          pytest tests
