--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       matrix:
         python-version: [ 3.8 ]
-        SQLALCHEMY_DATABASE_URI: ["sqlite:///:memory:", "postgresql://postgres:postgres@postgres/ci-test"]
+        SQLALCHEMY_DATABASE_URI: ["postgresql://postgres:postgres@postgres/ci-test"]
 
     steps:
       - name: Set up Python ${{ matrix.python-version }}
@@ -57,6 +57,14 @@ jobs:
         run: |
           cd my-site
           poetry install
+      - name: Setup invenio
+      - run: |
+          cd my-site
+          ./scripts/setup.sh
+      - name: Run invenio
+      - run: |
+          cd my-site
+          ./scripts/run.sh
 #      - name: Test with pytest
 #        run: |
 #          pytest tests
