--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,14 +57,17 @@ jobs:
         run: |
           cd my-site
           poetry install
-      - name: Setup invenio
+      - name: Test invenio
         run: |
-          cd my-site
-          ./scripts/setup.sh
-      - name: Run invenio
-        run: |
-          cd my-site
-          ./scripts/run.sh
+          invenio
+#      - name: Setup invenio
+#        run: |
+#          cd my-site
+#          ./scripts/setup.sh
+#      - name: Run invenio
+#        run: |
+#          cd my-site
+#          ./scripts/run.sh
 #      - name: Test with pytest
 #        run: |
 #          pytest tests
