--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,19 +57,19 @@ jobs:
         run: |
           cd my-site
           poetry install
-#      - name: Test invenio
+      - name: Test invenio
+        run: |
+          invenio
+#      - name: Setup invenio
 #        run: |
-#          invenio
-      - name: Setup invenio
-        run: |
-          cd my-site/scripts
-          chmod +x setup.sh
-          ./setup.sh
-      - name: Run invenio
-        run: |
-          cd my-site/scripts
-          chmod +x setup.sh
-          ./run.sh
+#          cd my-site/scripts
+#          chmod +x setup.sh
+#          ./setup.sh
+#      - name: Run invenio
+#        run: |
+#          cd my-site/scripts
+#          chmod +x setup.sh
+#          ./run.sh
 #      - name: Test with pytest
 #        run: |
 #          pytest tests
