--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,7 @@ jobs:
           invenio
       - name: Docker compose
         run: |
+          cd my-site
           docker-compose up -d
       - name: Setup invenio
         run: |
