--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,16 +25,16 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Cache pip
-        uses: actions/cache@v2
-        with:
-          # This path is specific to Ubuntu
-          path: ~/.cache/pip
-          # Look to see if there is a cache hit for the corresponding requirements file
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-            ${{ runner.os }}-
+#      - name: Cache pip
+#        uses: actions/cache@v2
+#        with:
+#          # This path is specific to Ubuntu
+#          path: ~/.cache/pip
+#          # Look to see if there is a cache hit for the corresponding requirements file
+#          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+#          restore-keys: |
+#            ${{ runner.os }}-pip-
+#            ${{ runner.os }}-
       - name: Configure sysctl limits
         run: |
           sudo swapoff -a
@@ -52,7 +52,7 @@ jobs:
       - name: Before install
         run: |
           pip install poetry
-          poetry config virtualenvs.create false
+#          poetry config virtualenvs.create false
       - name: Install dependencies
         run: |
           cd my-site
