--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,15 +56,18 @@ jobs:
       - name: Install dependencies
         run: |
           cd my-site
+          echo -e "\nwhich python"
           which python
-          pip list
           poetry install
+          echo -e "\nwpip list"
+          pip list
       - name: Test invenio
         run: |
           invenio
       - name: Run tests
         run: |
           cd my-site
+          ls -la
           ./run-tests.sh
 #      - name: Docker compose
 #        run: |
