--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,22 +53,22 @@ jobs:
         run: |
           pip install poetry
           poetry config virtualenvs.create false
-#      - name: Install dependencies
-#        run: |
-#          cd my-site
-#          echo -e "\nwhich python"
-#          which python
-#          poetry install
-#          echo -e "\nwpip list"
-#          pip list
-#      - name: Test invenio
-#        run: |
-#          invenio
+      - name: Install dependencies
+        run: |
+          cd my-site
+          echo -e "\nwhich python"
+          which python
+          poetry install
+          echo -e "\nwpip list"
+          pip list
+      - name: Test invenio
+        run: |
+          invenio
       - name: Run tests
         run: |
           cd my-site
           ls -la
-          cat ./run-tests.sh
+          cat ./run_tests.sh
 #      - name: Docker compose
 #        run: |
 #          cd my-site
