SQL_ALCHEMY_DATABASE_URI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
           invenio
       - name: Run tests
         env:
-          SQLALCHEMY_DATABASE_URI: ${{ matrix.SQLALCHEMY_DATABASE_URI }}
+          INVENIO_SQLALCHEMY_DATABASE_URI: ${{ matrix.SQLALCHEMY_DATABASE_URI }}
         run: |
           cd my-site
           ls -la
