Add oarepo-multilingual dependency

--- a/{{cookiecutter.project_shortname}}/pyproject.toml
+++ b/{{cookiecutter.project_shortname}}/pyproject.toml
@@ -25,6 +25,7 @@ oarepo-actions = "^1.0.6"
 oarepo-s3 = "^1.2.0"
 oarepo-references = "^1.11.2"
 oarepo-taxonomies = "^2.5.4"
+oarepo-multilingual = "^2.4.3"
 
 s3-client-lib = { git = "https://github.com/CESNET/s3-client.git", branch = "master" }
 
